[package]
name = "ramDownloader"
version = "0.1.0"
authors = ["Daniel Pavela <daniel.pavela@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.9.1"
gdk = "0.13.0"
glib = "0.10.1"
gio = "0.9.0"
rand = "0.7.3"
